hphp/hack/test/typecheck/reserved_name28.php.exp
File "reserved_name28.php", line 5, characters 7-12:
Double cannot be used as it is reserved. (Naming[2068])
