hphp/hack/test/typecheck/reserved_name28.php
<?hh

namespace Foo;

class Double {}
